Adding gitpod logo to HTTP response

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -22,3 +22,4 @@ vscode:
     - ms-azuretools.vscode-azurefunctions
     - ms-azuretools.vscode-azureresourcegroups
     - ms-python.python
+    - whizkydee.material-palenight-theme
